crates/as2_pcode/src/codegen/snapshots/ruasc_as2_pcode__codegen__tests__all_samples@typed_variables.as.snap
---
source: crates/as2_pcode/src/codegen/tests.rs
expression: builder
input_file: samples/as2/typed_variables.as
---
DefineFunction "add", 2, "a", "b" {
Push "a"
GetVariable
Push "b"
GetVariable
Add2
Return
}
Pop
DefineFunction "getMessage", 0 {
Push "Test message"
Return
}
Pop
DefineFunction "processData", 1, "data" {
Push "data"
GetVariable
Trace
}
Pop
DefineFunction "complexFunc", 3, "name", "age", "isValid" {
Push "valid"
Push "isValid"
GetVariable
Push "age"
Push "age"
GetVariable
Push "name"
Push "name"
GetVariable
Push 3
InitObject
Return
}
Pop
DefineFunction "forEach", 2, "arr", "callback" {
Push "i"
Push 0
DefineLocal
loc0002: Push "i"
GetVariable
Push "arr"
GetVariable
Push "length"
GetMember
Less2
Not
If loc0000
Push "arr"
GetVariable
Push "i"
GetVariable
GetMember
Push 1
Push "callback"
CallFunction
Pop
loc0001: Push "i"
Push "i"
GetVariable
Increment
SetVariable
Jump loc0002
loc0000: 
}
Pop
Push "num"
Push 42
DefineLocal
Push "str"
Push "Hello"
DefineLocal
Push "flag"
Push true
DefineLocal
Push "obj"
Push 0
InitObject
DefineLocal
Push "arr"
Push 0
InitArray
DefineLocal
Push "numbers"
Push 0
Push "Array"
NewObject
DefineLocal
Push "strings"
Push "three"
Push "two"
Push "one"
Push 3
InitArray
DefineLocal
Push "someValue"
Push "123"
DefineLocal
Push "numValue"
Push "someValue"
GetVariable
Push 1
Push "Number"
CallFunction
DefineLocal
Push "strValue"
Push 42
Push 1
Push "String"
CallFunction
DefineLocal
Push "userData"
Push "scores"
Push "Array"
Push 3
Push 2
Push 1
Push 3
InitArray
StoreRegister 0
SetVariable
Push register0
Push "name"
Push "String"
Push "User"
StoreRegister 0
SetVariable
Push register0
Push "id"
Push "Number"
Push 1
StoreRegister 0
SetVariable
Push register0
Push 3
InitObject
DefineLocal
